<resources>
    <string name="app_name">Dr. Voice</string>
    <!--debug-->
    <!--<string name="key">329856021028-ff3v3s6gn61cs2ibemhcpufki6qjg158.apps.googleusercontent.com</string>-->
    <!--release-->
    <string name="key">329856021028-mec6eonjl3f9b9kla3rrg442k4mahmfd.apps.googleusercontent.com</string>
    <!--home page-->
    <string name="home_page_title">嗓音自我照護\n(練習版)</string>
    <string name="home_page_start">開始</string>
    <string name="home_page_developer">亞東嗓音團隊開發</string>
    <!--login-->
    <string name="login">登入</string>
    <string name="hint">請輸入手機號碼</string>
    <string name="login_nonempty">帳號不能為空</string>
    <string name="login_fail">登入失敗</string>
    <string name="login_loading">讀取中</string>
    <string name="login_wait">請等待...</string>
    <!--main-->
    <string-array name="menu_text_array">
        <item>每日練習</item>
        <item>每週評量</item>
        <item>歷史紀錄</item>
        <item>語速監控</item>
        <item>設"        "定</item>
    </string-array>
    <string name="main_menu_daily_exercise">每日練習</string>
    <string name="main_menu_weekly_assessment">每週評量</string>
    <string name="main_menu_history">歷史紀錄</string>
    <string name="main_menu_health_education">嗓音衛教</string>
    <string name="main_menu_speak_speed">語速監控</string>
    <string name="main_menu_setting">設"        "定</string>
    <string name="main_menu_dialog_title">提醒</string>
    <string name="main_menu_dialog_message">此功能需經由亞東嗓音團隊設定</string>
    <string name="main_menu_dialog_positivebutton_message">知道了！！</string>


    <!--speak speed-->
    <string name="zero">0</string>
    <string name="speak_speed_title">語速監控</string>
    <string name="speak_speed_time_default">00 : 00</string>
    <string name="speak_speed_date_default">0000/00/00</string>
    <string name="speak_start_hint_default">按下方按鈕開始監控</string>
    <string name="speak_good">非常好</string>
    <string name="speak_slower">稍微在慢一點</string>
    <string name="speak_too_fast">太快囉</string>
    <string name="speak_graduation_standard">標準</string>
    <string name="speak_graduation_faster">稍快</string>
    <string name="speak_calculate_font">字數/分鐘</string>
    <string name="speak_start_hint">請按鈕開始</string>
    <string name="speak_waiting">等待語速監控</string>
    <string name="speak_recording">正在語速監控</string>
    <!--每日練習-->
    <string name="daily_exercise_toolbar_title">每日練習</string>
    <string-array name="daily_exercise_title_item">
        <item>放鬆運動練習</item>
        <item>腹式呼吸練習</item>
        <item>吹水發聲練習</item>
        <item>高低音吟唱練習</item>
        <item>前置共鳴練習</item>
        <item>軟起音練習</item>
    </string-array>
    <string name="daily_exercise_next_step">下一步</string>
    <string name="daily_exercise_previous_step">上一步</string>
    <string name="daily_exercise_start_button">開始</string>
    <string name="daily_exercise_finish_title">練習結束休息</string>
    <string name="daily_exercise_complete">恭喜完成</string>
    <string name="daily_exercise_back_menu">回主選單</string>
    <string name="daily_exercise_practice4_action_a">聳肩後放鬆</string>
    <string name="daily_exercise_practice4_action_b">慢慢低頭再回來</string>
    <string name="daily_exercise_practice4_action_c">頭往左邊側躺在換邊</string>
    <string name="daily_exercise_practice4_action_d">雙手用力推再放鬆</string>
    <string name="daily_exercise_playing">播放音檔中 . . .</string>
    <string-array name="soft_attack">
        <item>貓咪</item>
        <item>綿花</item>
        <item>明天</item>
        <item>玫瑰</item>
        <item>木頭</item>
        <item>朦朧</item>
        <item>慢慢來</item>
        <item>沒關係</item>
        <item>棉花棒</item>
        <item>瞇瞇眼</item>
        <item>貓咪喝湯</item>
        <item>美麗人生</item>
    </string-array>
    <string-array name="pre_resonance">
        <item>呼吸</item>
        <item>花朵</item>
        <item>和平</item>
        <item>哈欠</item>
        <item>蝴蝶</item>
        <item>河流</item>
        <item>哈哈笑</item>
        <item>畫畫圖</item>
        <item>紅綠燈</item>
        <item>回家好</item>
        <item>闔家平安</item>
        <item>美麗人生</item>
    </string-array>
    <!--setting-->
    <string name="setting_title">設定</string>
    <string name="setting_please_set">請設定練習提醒時間</string>
    <string name="setting_daily_notice">每日練習提醒</string>
    <string name="setting_weekly_notice">每周評量提醒</string>
    <string name="setting_connection_us">聯絡信箱</string>
    <string name="setting_repeat">重"  "複</string>
    <string name="setting_logout">登出</string>
    <string name="doctor_setting">醫師設定</string>
    <string-array name="week_array">
        <item>星期日</item>
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
    </string-array>
    <string name="setting_year">年</string>
    <string name="setting_month">月</string>
    <string name="setting_day">日</string>
    <string name="setting_number">號</string>
    <string name="setting_back_to_the_clinic_time">回診時間</string>
    <string name="setting_treatment_time">嗓音治療時間</string>
    <string name="setting_time">亞東嗓音回診</string>
    <string name="setting_none_value">無</string>
    <!--每週評量-->
    <string name="weekly_assessment_toolbar_title">每週評量</string>
    <string name="weekly_assessment_sound_title">每週用聲紀錄</string>
    <string name="weekly_assessment_self_title">每週自我評估</string>
    <string name="weekly_assessment_start">開始</string>
    <string-array name="weekly_assessment_sound_topic">
        <item>不適當的說話行為\n如大叫、壓低音、\n連續說話(超過20分鐘)</item>
        <item>一天的說話量</item>
        <item>清喉嚨的次數</item>
        <item>喝濃茶/咖啡的行為\n(平均每天)</item>
        <item>抽菸的行為\n(平均每天)</item>
        <item>喝水的頻率\n(平均每天)</item>
        <item>嗓音練習次數</item>
    </string-array>
    <string-array name="weekly_assessment_sound_topic_option_1">
        <item>常常</item>
        <item>有時候</item>
        <item>很少</item>
        <item>幾乎沒有</item>
    </string-array>
    <string-array name="weekly_assessment_sound_topic_option_2">
        <item>完全沒說話</item>
        <item>有說幾句</item>
        <item>說一些</item>
        <item>說(或唱)很多</item>
    </string-array>
    <string-array name="weekly_assessment_sound_topic_option_3">
        <item>常常</item>
        <item>有一些</item>
        <item>很少</item>
        <item>幾乎沒有</item>
    </string-array>
    <string-array name="weekly_assessment_sound_topic_option_4">
        <item>超過3杯</item>
        <item>2~3杯</item>
        <item>1杯</item>
        <item>幾乎沒有</item>
    </string-array>
    <string-array name="weekly_assessment_sound_topic_option_5">
        <item>1包或更多</item>
        <item>半包左右</item>
        <item>1~5根</item>
        <item>沒有</item>
    </string-array>
    <string-array name="weekly_assessment_sound_topic_option_6">
        <item>整天只喝一兩次或更少</item>
        <item>半天喝一次</item>
        <item>每1小時喝一次</item>
        <item>每半小時喝一次</item>
    </string-array>
    <string-array name="weekly_assessment_sound_topic_option_7">
        <item>0次</item>
        <item>1次</item>
        <item>2次</item>
        <item>3次</item>
    </string-array>
    <string name="weekly_assessment_self_assessment_title">自我評估表</string>
    <string-array name="weekly_assessment_self_assessment_topic">
        <item>我的嗓音\n很難讓人聽清楚</item>
        <item>在吵雜室內\n別人很難聽懂我說什麼</item>
        <item>嗓音問題限制了\n我的個人與社交行為</item>
        <item>嗓音問題\n使我無法與人順利交談</item>
        <item>發出聲音或是說話\n讓我覺得很吃力</item>
        <item>我無法預測\n什麼時候嗓音會清楚</item>
        <item>我的嗓音問題\n讓我很困擾</item>
        <item>我的嗓音問題\n使我覺得有障礙</item>
        <item>別人常問\n你的聲音怎麼了</item>
        <item>我的聲音問題\n影響了我的收入</item>
    </string-array>
    <string-array name="weekly_assessment_self_assessment_topic_option">
        <item>總是如此</item>
        <item>經常</item>
        <item>有時候</item>
        <item>很少</item>
        <item>從來沒有</item>
    </string-array>
    <string-array name="weekly_assessment_topic_number">
        <item>第一題</item>
        <item>第二題</item>
        <item>第三題</item>
        <item>第四題</item>
        <item>第五題</item>
        <item>第六題</item>
        <item>第七題</item>
        <item>第八題</item>
        <item>第九題</item>
        <item>第十題</item>
    </string-array>
    <string name="weekly_assessment_successful">完成</string>

    <!--歷史紀錄-->
    <string name="history_message_title">歷史紀錄</string>
    <string name="history_voice_history">用"  "聲\n紀"  "錄</string>
    <string name="history_exercise_history">自"  "我\n評"  "估</string>

    <string name="history_detail_good_text">接\n近\n完\n美</string>
    <string name="history_detail_bad_text">有\n待\n加\n強</string>

    <string name="fragment_doctor_daily_settting_one">放鬆</string>
    <string name="fragment_doctor_daily_settting_two">呼吸</string>
    <string name="fragment_doctor_daily_settting_three">吹水</string>
    <string name="fragment_doctor_daily_settting_four">高音</string>
    <string name="fragment_doctor_daily_settting_five">共鳴</string>
    <string name="fragment_doctor_daily_settting_six">軟起</string>
    <string name="fragment_doctor_daily_settting_save">儲存</string>

    <string name="fragment_self_setting_settting_one">不當行為</string>
    <string name="fragment_self_setting_settting_two">說話量</string>
    <string name="fragment_self_setting_settting_three">清喉嚨</string>
    <string name="fragment_self_setting_settting_four">喝茶/咖啡</string>
    <string name="fragment_self_setting_settting_five">抽煙</string>
    <string name="fragment_self_setting_settting_six">喝水</string>
    <string name="fragment_self_setting_settting_seven">練習</string>
    <string name="fragment_self_setting_settting_save">儲存</string>


    <string name="fragment_doctor_daily_time_topic">題目</string>
    <string name="fragment_doctor_daily_time_topic_number0">0</string>
    <string name="fragment_doctor_daily_time_topic_number1">1</string>
    <string name="fragment_doctor_daily_time_topic_number2">3</string>
    <string name="fragment_doctor_daily_time_topic_number3">5</string>
    <string name="fragment_doctor_daily_time_topic1">放鬆</string>
    <string name="fragment_doctor_daily_time_topic2">呼吸</string>
    <string name="fragment_doctor_daily_time_topic3">吹水</string>
    <string name="fragment_doctor_daily_time_topic4">高音</string>
    <string name="fragment_doctor_daily_time_topic5">共鳴</string>
    <string name="fragment_doctor_daily_time_topic6">軟起</string>

    <string name="fragment_doctor_daily_time_setting_save">儲存</string>
    <string name="doctor_setting_title">醫師設定</string>

    <!-- 嗓音衛教-->
    <string name="health_education_toolbar_title">嗓音衛教</string>


</resources>
