<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/topic_one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/item_self_setting_not_select"
            android:gravity="center"
            android:text="@string/fragment_self_setting_settting_one"
            android:textColor="@color/white"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/topic_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/item_self_setting_not_select"
            android:gravity="center"
            android:text="@string/fragment_self_setting_settting_two"
            android:textColor="@color/white"
            android:textSize="30sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/topic_three"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/item_self_setting_not_select"
            android:gravity="center"
            android:text="@string/fragment_self_setting_settting_three"
            android:textColor="@color/white"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/topic_four"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/item_self_setting_not_select"
            android:gravity="center"
            android:text="@string/fragment_self_setting_settting_four"
            android:textColor="@color/white"
            android:textSize="30sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/topic_five"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/item_self_setting_not_select"
            android:gravity="center"
            android:text="@string/fragment_self_setting_settting_five"
            android:textColor="@color/white"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/topic_six"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/item_self_setting_not_select"
            android:gravity="center"
            android:text="@string/fragment_self_setting_settting_six"
            android:textColor="@color/white"
            android:textSize="30sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/topic_seven"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/item_self_setting_not_select"
            android:gravity="center"
            android:text="@string/fragment_self_setting_settting_seven"
            android:textColor="@color/white"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/item_self_setting_select"
            android:gravity="center"
            android:text="SAVE"
            android:textColor="@color/white"
            android:textSize="30sp"/>
    </LinearLayout>
</LinearLayout>