<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg_color">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/voice_logo"
        app:layout_marginLeftPercent="15%"
        app:layout_marginRightPercent="15%"
        app:layout_marginTopPercent="20%" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/home_page_title"
        android:textColor="@color/login_text_color"
        android:textSize="@dimen/home_page_title_text_size"
        app:layout_marginLeftPercent="15%"
        app:layout_marginRightPercent="15%"
        app:layout_marginTopPercent="37%" />

    <Button
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:background="@drawable/start_button_bg"
        android:text="@string/home_page_start"
        android:textColor="@color/black"
        android:textSize="@dimen/home_page_start_text_size"
        app:layout_marginLeftPercent="15%"
        app:layout_marginRightPercent="15%"
        app:layout_marginTopPercent="5%" />
    <TextView
        android:id="@+id/developer"
        android:text="@string/home_page_developer"
        android:textSize="@dimen/home_page_developer_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:layout_marginBottomPercent="4%"/>

</android.support.percent.PercentRelativeLayout>