<?xml version="1.0" encoding="utf-8"?>
<androidx.percentlayout.widget.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg_color">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        app:layout_heightPercent="60%"
        app:layout_marginTopPercent="5%"
        app:layout_widthPercent="80%" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/next_step_button"
        android:layout_centerHorizontal="true"
        android:background="@drawable/drawable_daily_exercise_start_button"
        android:text="@string/daily_exercise_start_button"
        android:textColor="@color/white"
        android:textSize="@dimen/daily_exercise_select_page_start_button_text_size"
        app:layout_marginBottomPercent="5%"
        app:layout_widthPercent="80%" />

    <Button
        android:id="@+id/next_step_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/indicator"
        android:background="@color/transparent"
        android:text="@string/daily_exercise_next_step"
        android:textColor="@color/daily_exercise_step_button_text"
        android:textSize="@dimen/daily_exercise_select_page_next_step_button_text_size" />

    <Button
        android:id="@+id/previous_step_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/indicator"
        android:background="@color/transparent"
        android:text="@string/daily_exercise_previous_step"
        android:textColor="@color/daily_exercise_step_button_text"
        android:textSize="@dimen/daily_exercise_select_page_next_step_button_text_size" />

    <com.imac.dr.voice_app.component.CustomIndicator
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/next_step_button"
        android:layout_alignBottom="@+id/next_step_button"
        android:layout_centerInParent="true"
        android:gravity="center_vertical" />
</androidx.percentlayout.widget.PercentRelativeLayout>