<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg_color">

    <com.imac.voice_app.component.ToolbarView
        android:id="@+id/setting_toolbar_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:backButtonVisibility="false"
        app:layout_heightPercent="10%"
        app:titleText="@string/setting_title" />

    <ImageView
        android:id="@+id/iv_connection_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_container"
        android:background="@color/setting_connection_us"
        android:scaleType="centerInside"
        android:src="@drawable/email_button"
        app:layout_heightPercent="10%" />

    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_heightPercent="80%"
        android:layout_below="@+id/setting_toolbar_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:id="@+id/rl_please_set"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_setting_please_set"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/setting_please_set"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/toolbar_line" />
        </RelativeLayout>

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/rl_daily_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_daily_notice_title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/setting_daily_notice"
                android:textSize="14sp"
                app:layout_heightPercent="20%"
                app:layout_marginLeftPercent="5%"
                app:layout_marginTopPercent="15%" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignParentRight="true"
                android:gravity="center"
                app:layout_heightPercent="20%"
                app:layout_marginRightPercent="5%"
                app:layout_marginTopPercent="15%"
                app:layout_widthPercent="20%">

                <Switch
                    android:id="@+id/sw_daily_notice_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:switchMinWidth="50dp" />
            </RelativeLayout>


            <TextView
                android:id="@+id/tv_daily_notice_time"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_below="@+id/tv_daily_notice_title"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/speak_speed_time_default"
                android:textSize="50sp"
                app:layout_heightPercent="40%"
                app:layout_marginTopPercent="10%" />

            <TextView
                android:id="@+id/tv_daily_notice_repeat"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tv_daily_notice_title"
                android:gravity="center"
                android:text="@string/setting_repeat"
                app:layout_heightPercent="35%"
                app:layout_marginRightPercent="5%"
                app:layout_marginTopPercent="10%"
                app:layout_widthPercent="20%" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/toolbar_line" />

        </android.support.percent.PercentRelativeLayout>

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/rl_weekly_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_weekly_notice_title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/setting_weekly_notice"
                android:textSize="14sp"
                app:layout_heightPercent="20%"
                app:layout_marginLeftPercent="5%"
                app:layout_marginTopPercent="15%" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignParentRight="true"
                android:gravity="center"
                app:layout_heightPercent="20%"
                app:layout_marginRightPercent="5%"
                app:layout_marginTopPercent="15%"
                app:layout_widthPercent="20%">

                <Switch
                    android:id="@+id/sw_weekly_notice_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:switchMinWidth="50dp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_weekly_notice_time"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_below="@+id/tv_weekly_notice_title"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical"
                android:text="@string/speak_speed_time_default"
                android:textSize="50sp"
                app:layout_heightPercent="40%"
                app:layout_marginTopPercent="10%" />

            <TextView
                android:id="@+id/tv_weekly_notice_week"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tv_weekly_notice_title"
                android:gravity="center"
                android:text="星期一"
                android:textSize="14sp"
                app:layout_heightPercent="35%"
                app:layout_marginLeftPercent="5%"
                app:layout_marginTopPercent="10%"
                app:layout_widthPercent="20%" />

            <TextView
                android:id="@+id/tv_weekly_notice_repeat"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tv_weekly_notice_title"
                android:gravity="center"
                android:text="@string/setting_repeat"
                app:layout_heightPercent="35%"
                app:layout_marginRightPercent="5%"
                app:layout_marginTopPercent="10%"
                app:layout_widthPercent="20%" />
        </android.support.percent.PercentRelativeLayout>
    </LinearLayout>

</android.support.percent.PercentRelativeLayout>